# Emotion-Detection

./: .gitignore  CMakeLists.txt  EmotionRecognition.pptx  README.md  annotate.cpp  emotionRecognition.cpp  emotionRecognition4ClassProbablityOVA.cpp  emotionRecognition4ClassProbablityOVO.cpp  emotionRecognitionMulticlass.cpp  objectDetection.cpp  train.cpp  train4ClassProbablityOVA.cpp  train4ClassProbablityOVO.cpp  train4classProbablity.cpp  trainMulticlass.cpp
data/: put landmark data here
